@@ -126,6 +126,13 @@ win_highlight_enabled_cb(void *data, Evas_Object *obj, void *event_info __UNUSED
 }
 
 static void
+win_highlight_animate_cb(void *data, Evas_Object *obj, void *event_info __UNUSED__)
+{
+   elm_win_focus_highlight_animate_set((Evas_Object *)data,
+                                       elm_check_state_get(obj));
+}
+
+static void
 custom_chain_unset_cb(void *data, Evas_Object *obj, void *event_info __UNUSED__)
 {
    Evas_Object *c, *child = NULL;
@@ -209,6 +216,7 @@ test_focus4(void *data __UNUSED__, Evas_Object *obj __UNUSED__, void *event_info
    win = elm_win_util_standard_add("focus4", "Focus 4");
    elm_win_autodel_set(win, EINA_TRUE);
    elm_win_focus_highlight_enabled_set(win, EINA_TRUE);
+   elm_win_focus_highlight_animate_set(win, EINA_TRUE);
    elm_config_focus_highlight_enabled_set(EINA_TRUE);
    elm_config_focus_highlight_animate_set(EINA_TRUE);
 
@@ -234,7 +242,7 @@ test_focus4(void *data __UNUSED__, Evas_Object *obj __UNUSED__, void *event_info
    elm_object_text_set(tg, "Focus Highlight Animate (Config)");
    elm_check_state_set(tg, EINA_TRUE);
    evas_object_smart_callback_add(tg, "changed", highlight_animate_cb, NULL);
-   elm_grid_pack(gd, tg, 10, 15, 60, 10);
+   elm_grid_pack(gd, tg, 10, 10, 60, 10);
    evas_object_show(tg);
 
    tg = elm_check_add(win);
@@ -243,7 +251,16 @@ test_focus4(void *data __UNUSED__, Evas_Object *obj __UNUSED__, void *event_info
    elm_object_text_set(tg, "Focus Highlight Enabled (Win)");
    elm_check_state_set(tg, EINA_TRUE);
    evas_object_smart_callback_add(tg, "changed", win_highlight_enabled_cb, win);
-   elm_grid_pack(gd, tg, 10, 25, 60, 10);
+   elm_grid_pack(gd, tg, 10, 15, 60, 10);
+   evas_object_show(tg);
+
+   tg = elm_check_add(win);
+   evas_object_size_hint_weight_set(tg, EVAS_HINT_EXPAND, EVAS_HINT_EXPAND);
+   evas_object_size_hint_align_set(tg, EVAS_HINT_FILL, EVAS_HINT_FILL);
+   elm_object_text_set(tg, "Focus Highlight Animate (Win)");
+   elm_check_state_set(tg, EINA_TRUE);
+   evas_object_smart_callback_add(tg, "changed", win_highlight_animate_cb, win);
+   elm_grid_pack(gd, tg, 10, 20, 60, 10);
    evas_object_show(tg);
 
    bt = elm_button_add(win);
